alterando codigo fonte

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,15 +1,13 @@
 <html>
 <body>
-<h1>Cadastro de Carro</h1>
+<h1> Cadastro de carro </h1>
 
-<form action ="/create-car" method="post" >
-    <label> Car name: </label>
+<form action="/create-car" method="post">
+    <label> Carro </label>
     <input type="text" name="carName" id="carName">
 
-    <button type ="submit">Cadastrar</button>
-
+    <button type="submit"> Cadastrar </button>
 </form>
-
 
 </body>
 </html>
